add google tags in head nd body

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -24,6 +24,16 @@
  
 	<!-- fav icon -->
 	<link rel="icon" type="image/x-icon" href="{% static 'image/fab-ic.png' %}">
+
+
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	' https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f) ;
+	})(window,document,'script','dataLayer','GTM-PR4XX4G');</script>
+	<!-- End Google Tag Manager -->
+	
 </head>
 <div class="mobilelandscapeview" style="position:relative;">
 	<div class="landscape_view1">
@@ -280,6 +290,13 @@
 	</footer>
 	<!-- footer close here-->
 </div>
+
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src=" https://www.googletagmanager.com/ns.html?id=GTM-PR4XX4G "
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) --> 
+
+
 	<!-- bootstrap js -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -394,6 +411,8 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-PR4XX4G');</script>
     <!-- End Google Tag Manager -->
+
+
 </body>
 
 
