--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -22,6 +22,14 @@
 	  <link rel="icon" type="image/x-icon" href="{% static 'image/fab-ic.png' %}">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+   <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	' https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f) ;
+	})(window,document,'script','dataLayer','GTM-PR4XX4G');</script>
+	<!-- End Google Tag Manager -->
+	
 </head>
 <body>
 	<div class="mobilelandscapeview" style="position:relative;">
@@ -479,6 +487,12 @@
 		</div>
 	</div>
 </footer>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src=" https://www.googletagmanager.com/ns.html?id=GTM-PR4XX4G "
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+
 <!-- footer close here-->
 <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-angle-up"></i></button>
     <!-- bootstrap js -->
