--- a/templates/500_page.html
+++ b/templates/500_page.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>About Online Games - WNDR.com</title>
-	<meta name="description" content="WNDR offers browser-based multiplayer meta-games, virtual events, and much more on any device that is connected through a simple website link.">
+	<title>500</title>
+	
 	<!-- slick css -->
  
 	<!-- bootstrap-css start -->
@@ -85,7 +85,7 @@
 					      <li class="nav-item">
 					        <a class="nav-link" href="{% url 'home' %}">HOME</a>
 					      </li>
-					      <li class="nav-item active">
+					      <li class="nav-item">
 					        <a class="nav-link" href="{% url 'about' %}">ABOUT</a>
 					      </li>
 					      <li class="nav-item">
