chabge in landngpage

--- a/templates/land_page.html
+++ b/templates/land_page.html
@@ -107,7 +107,7 @@
 		<div class="modal-dialog modal-lg modal-dialog-centered">
 			<div class="modal-content" style='background:#111;border-radius:30px;'>
 			<div class="sbscribe-bg">
-				<h2>Get instant early access to play online by clicking the
+				<h2 class="text-capitalize">Get instant early access to play online by clicking the
 					“SIGN UP AND PLAY” button</h2>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">×</span> </button>
 					
@@ -203,7 +203,7 @@
 								<img src="{% static 'landing_page/images/About-line2.png' %}" alt="line-about-1">
 							</div>
 							<div class="shadow-outer-div">
-								<p>This is the coolest multiplayer Metaverse online game you’ll ever play. Become a WNDR play
+								<p class="text-capitalize">This is the coolest multiplayer Metaverse online game you’ll ever play. Become a WNDR play
 									as a
 									WNDR in their breakout video game titled The Colosseum. Your goal is to train as a
 									WNDR
@@ -252,15 +252,15 @@
 		<div class="container">
 			<div class="row wifi_connected">
 				<div class="col-md-12">
-					<p> Internet WiFi Requirements</p>
+					<p class="text-capitalize"> Internet WiFi Requirements</p>
 				</div>
 			</div>
 			<div class="row">	
 				<div class="col-md-12">
 					<div class="downloadDevice_outer">
-						<h2>No Downloads <br><span>Play on any device</span></h2>
+						<h2 class="text-capitalize">No Downloads <br><span class="text-capitalize">Play on any device</span></h2>
 
-						<p class="mbl_internet_wifi"> Internet Wifi Connection </p>
+						<p class="mbl_internet_wifi text-capitalize"> Internet Wifi Requirements </p>
 						<div class="interentSpeed">
 							
 							<div class="interentSpeed_leftside">
@@ -276,7 +276,7 @@
 						<div class="downloadImg_middle">
 							<img src="{% static "landing_page/images/downloadDevice.png" %}" alt="playDevice">
 						</div>
-						<p class="Download_paragraph">You’ll really enjoy our free to play no downloads Online AAA game.
+						<p class="Download_paragraph text-capitalize">Become a WNDR really enjoy our free to play no downloads Online AAA game.
 							You can
 							play on any device without the need of a clunky console. Play with your mouse or keyboard, Xbox, PlayStation 5 controllers, or use your MobilePhone as a gamepad.</p>
 					</div>
