--- a/templates/land_page.html
+++ b/templates/land_page.html
@@ -203,7 +203,7 @@
 								<img src="{% static 'landing_page/images/About-line2.png' %}" alt="line-about-1">
 							</div>
 							<div class="shadow-outer-div">
-								<p class="text-capitalize">This is the coolest multiplayer Metaverse online game you’ll ever play. Become a WNDR play
+								<p class="text-capitalize">This is the coolest multiplayer Metaverse online game you’ll ever play. Become a WNDR , play
 									as a
 									WNDR in their breakout video game titled The Colosseum. Your goal is to train as a
 									WNDR
