add replace become a wndr

--- a/templates/land_page.html
+++ b/templates/land_page.html
@@ -203,7 +203,7 @@
 								<img src="{% static 'landing_page/images/About-line2.png' %}" alt="line-about-1">
 							</div>
 							<div class="shadow-outer-div">
-								<p class="text-capitalize">This is the coolest multiplayer Metaverse online game you’ll ever play. Become a WNDR , play
+								<p class="text-capitalize">This is the coolest multiplayer Metaverse online game you’ll ever play. You’ll really , play
 									as a
 									WNDR in their breakout video game titled The Colosseum. Your goal is to train as a
 									WNDR
@@ -276,7 +276,7 @@
 						<div class="downloadImg_middle">
 							<img src="{% static "landing_page/images/downloadDevice.png" %}" alt="playDevice">
 						</div>
-						<p class="Download_paragraph text-capitalize">Become a WNDR really enjoy our free to play no downloads Online AAA game.
+						<p class="Download_paragraph text-capitalize">You’ll really enjoy our free to play no downloads Online AAA game.
 							You can
 							play on any device without the need of a clunky console. Play with your mouse or keyboard, Xbox, PlayStation 5 controllers, or use your MobilePhone as a gamepad.</p>
 					</div>
