--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -616,5 +616,16 @@ function myFunction() {
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-PR4XX4G');</script>
+
+
+	<script>
+		$(function(){
+			$("img").each(function () {
+					var img = $(this);
+					img.attr("preload", 'none');
+					console.log("-----")
+			});
+			});
+	</script>
     <!-- End Google Tag Manager -->
 </html>
