--- a/templates/teams.html
+++ b/templates/teams.html
@@ -427,4 +427,14 @@
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-PR4XX4G');</script>
+
+
+	<script>
+		$(function(){
+			$("img").each(function () {
+					var img = $(this);
+					img.attr("preload", 'none');
+			});
+			});
+	</script>
     <!-- End Google Tag Manager -->
